fixing z-index hero content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ button,input{
       display: flex;
       flex-direction: column;
       align-items: center;
+      z-index: 0;
 }
 
 .profile > img {
